# Engine

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakeUserPresets.json  Dockerfile  README.md  build.sh  debug.sh  deploy.sh  flake.nix  install.sh  launch.sh  settings.gradle.kts  vcpkg-configuration.json  vcpkg.json
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  android_main.cpp
assets/shaders/asset/: asset.frag  asset.vert
assets/shaders/grid/: grid.frag  grid.vert
assets/shaders/image/: image.frag  image.vert
assets/shaders/line/: line.vert
assets/shaders/outline/: outline.frag  outline.vert
assets/shaders/polygon/: polygon.frag  polygon.vert
assets/shaders/raypicking/: raypicking.comp
assets/shaders/rectangle/: rectangle.frag  rectangle.vert
assets/shaders/shaderquad/: shaderquad.vert
assets/shaders/svg/: svg.frag  svg.vert
assets/shaders/text/: text.frag  text.vert
assets/spirv/: 1a132fdf300c380768badd17bfe164dd1c448255--raypicking.comp.spv  21945733ff039507cf380cc6b6735b86e09225c8--asset.vert.spv  2659bba1b0423cb85d14c1e72be5720cee038406--polygon.frag.spv  28881fdaa870b414b913324bb6fd302f3a00e4c3--image.frag.spv  4dfd8804700b39fa87aff40f410de0a951e4ecfc--line.vert.spv  60c055cbd5b177a2977832797619cd01cf7512e7--asset.frag.spv  61c81be1a8f2ad38f752800d81318fa6169de100--polygon.vert.spv  655515fb09a142b5d30251146a83b15793656922--text.frag.spv  69b0b7eea59ee749bae050b6ef98731e1ea72933--rectangle.vert.spv  837b738cd76204031bfb4df2767421f6dc952909--text.vert.spv  8a2589ca5ae19944c5083b1c0f54d13b7e923012--outline.vert.spv  8ef512ffdc66fbfd849dcc2b1316debd39d6963c--outline.frag.spv  a30c847cbd80c16fc76fedbe09967b9e67d5c306--svg.vert.spv  ad74199f3999dca074be87d1fedbe6379742b86a--grid.vert.spv  d5773ccd324ff5d00ec148cb81a592404ba42927--image.vert.spv  e992be5698c509a75720f7035ff4ab57ac484a63--grid.frag.spv  ec1bacbb964b24fb747a6559fbad033e8585045e--svg.frag.spv
docker/application/: deploy.sh  launch.sh
docker/database/: .gitignore  cables.csv  copy.sh  docker-compose.yml  launch.sh  pgpass_pgadmin  servers.json
enc_temp_folder/153ffaef224d3c7136b2afa8872df185/: .gitignore
gradle/wrapper/: gradle-wrapper.properties
include/application/: application.hpp  assets.hpp  camera.hpp  colors.hpp  events.hpp  mouse.hpp  rng.hpp  userinput.hpp
include/backend/: terminalprocess.hpp
include/circuit/: circuit.hpp
include/compute/: computepipeline.hpp
include/compute/implementations/: blurpipeline.hpp  blurspipeline.hpp  raytracingpipeline.hpp  raytraycespipeline.hpp  textraytracing.hpp
include/models/: instancedmodel.hpp  model.hpp  models.hpp  objmodel.hpp
include/models/implementations/: asset.hpp  grid.hpp  image.hpp  line.hpp  object.hpp  objmodel.hpp  particles.hpp  polygon.hpp  rectangle.hpp  shaderquad.hpp  svg.hpp  text.hpp  texture.hpp  triangle.hpp
include/models/implementations/instanced/: instancedobject.hpp  instancedpolygon.hpp  instancedrectangle.hpp
include/models/implementations/shaderquads/: destination.hpp  destinationmarker.hpp
include/models/implementations/unique/: image.hpp  object.hpp  objmodel.hpp  particles.hpp  polygon.hpp  rectangle.hpp  text.hpp  texture.hpp
include/persistence/: AppData.hpp  appdata.hpp  inventoryqueries.hpp  recipesqueries.hpp
include/pipelines/: pipeline.hpp
include/pipelines/compute/: raypicking.hpp
include/scenes/: scene.hpp  scenes.hpp
include/scenes/implementations/: addingredient.hpp  addrecipestep.hpp  background.hpp  buttons.hpp  default.hpp  graph.hpp  graph3d.hpp  header.hpp  instancing.hpp  inventory.hpp  main.hpp  menu.hpp  navbar.hpp  overlay.hpp  raytracing.hpp  recipe.hpp  recipes.hpp
include/scenes/implementations/default/: buttons.hpp  default.hpp  instancing.hpp  raytracing.hpp
include/ui/: button.hpp  textinput.hpp  widget.hpp
include/ui/implementations/: button.hpp  grid.hpp  textfield.hpp  textinput.hpp  textlabel.hpp
include/utils/: ShaderUtils.hpp  assets.hpp  camera.hpp  colors.hpp  engineutils.hpp  events.hpp  fonts.hpp  geometry.hpp  shaderutils.hpp  shapes.hpp  textures.hpp
include/vulkan/: commandbuffers.hpp  dearimgui.hpp  debug.hpp  dimgui.hpp  engine.hpp  graphicsbuffers.hpp  logicaldevice.hpp  memory.hpp  physicaldevice.hpp  pipeline.hpp  platform.hpp  rendering.hpp  surface.hpp  swapchain.hpp  synchronization.hpp
include/widgets/: widget.hpp
include/widgets/implementations/: scrollbar.hpp
src/: main.cpp
src/application/: application.cpp
src/backend/: terminalprocess.cpp
src/circuit/: circuit.cpp
src/compute/: computepipeline.cpp
src/compute/implementations/: blurpipeline.cpp  blurspipeline.cpp  raytracingpipeline.cpp  raytraycespipeline.cpp  textraytracing.cpp
src/meshes/example/: example.mtl
src/models/: model.cpp  models.cpp  objmodel.cpp
src/models/implementations/: asset.cpp  grid.cpp  image.cpp  line.cpp  objmodel.cpp  particles.cpp  polygon.cpp  rectangle.cpp  svg.cpp  text.cpp  texture.cpp  triangle.cpp
src/models/implementations/instanced/: instancedobject.cpp  instancedpolygon.cpp  instancedrectangle.cpp
src/pipelines/: pipeline.cpp
src/pipelines/compute/: raypicking.cpp
src/scenes/: scene.cpp  scenes.cpp
src/scenes/implementations/: addingredient.cpp  addrecipestep.cpp  background.cpp  buttons.cpp  default.cpp  graph.cpp  graph3d.cpp  header.cpp  instancing.cpp  inventory.cpp  main.cpp  menu.cpp  navbar.cpp  overlay.cpp  raytracing.cpp  recipe.cpp  recipes.cpp
src/shaders/raytracing/: picking.comp
src/shaders/rectangle/: rectangle.vert
src/shaders/texture/: picking.comp
src/ui/: button.cpp  textinput.cpp  widget.cpp
src/ui/implementations/: button.cpp  grid.cpp  textfield.cpp  textinput.cpp  textlabel.cpp
src/utils/: ShaderUtils.cpp  shaderutils.cpp
src/vulkan/: commandbuffers.cpp  dearimgui.cpp  debug.cpp  engine.cpp  graphicsbuffers.cpp  logicaldevice.cpp  physicaldevice.cpp  surface.cpp  swapchain.cpp  synchronization.cpp
src/widgets/: widget.cpp
src/widgets/implementations/: scrollbar.cpp
(+77 files in other folders)
